📖 DOC: add test target to Makefile

--- a/2-3/Makefile
+++ b/2-3/Makefile
@@ -1,6 +1,6 @@
 # Makefile
 
-.PHONY: run lint
+.PHONY: run lint test
 
 run:
 	go run ./cmd/app/main.go
@@ -8,3 +8,6 @@ run:
 lint:
 	go fmt ./...
 	go vet ./...
+
+test:
+	go test -v ./...
