👌 IMPROVE: Add migrate-up and migrate-down targets to Makefile

--- a/4-1/Makefile
+++ b/4-1/Makefile
@@ -1,6 +1,6 @@
 # Makefile
 
-.PHONY: run lint test
+.PHONY: run lint test migrate-up migrate-down
 
 run:
 	go run ./cmd/app/main.go
@@ -11,3 +11,9 @@ lint:
 
 test:
 	go test -v ./...
+
+migrate-up:
+	migrate -path db/migrations -database "mysql://bloger:bloger@tcp(localhost:33306)/bloger" up
+
+migrate-down:
+	migrate -path db/migrations -database "mysql://bloger:bloger@tcp(localhost:33306)/bloger" down
